@@ -2,6 +2,8 @@ Cascading Change Log
 
 unreleased (wip 1.1)
 
+  Refactored reduce side grouping and co-grouping operations to remove redundant code calls.
+
   Added ability to capture Hadoop specific job details like task start and stop times, and all available counter values.
 
   Added accessor for increment counters on c.s.CascadingStats. This allows applications to pull aggregate counter
